reshape the configmap to working condition

--- a/petclinic/templates/configmap.yml
+++ b/petclinic/templates/configmap.yml
@@ -3,8 +3,8 @@ kind: ConfigMap
 metadata:
   name: {{ include "petclinic.fullname" .}}
 data:
-  - MYSQL_ROOT_PASSWORD
-  - MYSQL_ALLOW_EMPTY_PASSWORD=true 
-  - MYSQL_USER=petclinic 
-  - MYSQL_PASSWORD=petclinic 
-  - MYSQL_DATABASE=petclinic
+  MYSQL_ROOT_PASSWORD:
+  MYSQL_ALLOW_EMPTY_PASSWORD: "true"
+  MYSQL_USER: petclinic 
+  MYSQL_PASSWORD: petclinic 
+  MYSQL_DATABASE: petclinic
