--- a/spring-petclinic/Dockerfile
+++ b/spring-petclinic/Dockerfile
@@ -1,11 +1,10 @@
-FROM eclipse-temurin:17 as builder
+FROM eclipse-temurin:17-alpine as builder
 WORKDIR /app
 COPY . ./
 RUN chmod +x mvnw
 RUN ./mvnw package
 
-
-FROM eclipse-temurin:17-jre as runner
+FROM eclipse-temurin:17-jre-alpine as runner
 EXPOSE 80
 WORKDIR /code
 COPY --from=builder /app/target/*.jar ./
