--- a/petclinic/templates/service.yml
+++ b/petclinic/templates/service.yml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: {{ include "petclinic.fullname" . }}
 spec:
-  # type: {{ .Values.service.type }}
+  type: {{ .Values.service.type }}
   selector:
     {{ include "petclinic.selectorLabels" .| nindent 6}}
   ports:
